Documentation edits made through Mintlify web editor

--- a/ai-tools/windsurf.mdx
+++ b/ai-tools/windsurf.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Windsurf setup"
+title: "Winndsurf setup"
 description: "Configure Windsurf for your documentation workflow"
 icon: "water"
 ---
